--- a/themes/clean-blog/layout/_partial/article-full.ejs
+++ b/themes/clean-blog/layout/_partial/article-full.ejs
@@ -16,10 +16,12 @@
                     <% } %>
                     <span class="meta">
                         <!-- Date and Author -->
-                        <% if(item.author) { %>
+                        <% if (item.author) { %>
                             Posted by <%- item.author %> on
                         <% } %>
+                        <% if (!item.about) { %>
                         <%= item.date.format(config.date_format) %>
+                        <% } %>
                     </span>
                 </div>
             </div>
