--- a/blog/css/base.css
+++ b/blog/css/base.css
@@ -315,13 +315,13 @@ footer {
   padding: 50px 0 65px;
 }
 footer .list-inline {
-  margin: 0;
+  margin: 0 0 20px 0;
   padding: 0;
 }
 footer .copyright {
-  font-size: 14px;
+  font-size: 12px;
   text-align: center;
-  margin-bottom: 0;
+  margin: 0;
 }
 .floating-label-form-group {
   font-size: 14px;
