--- a/themes/clean-blog/source/css/base.styl
+++ b/themes/clean-blog/source/css/base.styl
@@ -219,12 +219,12 @@ hr.small
 footer
   padding 50px 0 65px
   .list-inline
-    margin 0
+    margin 0 0 20px 0
     padding 0
   .copyright
-    font-size 14px
+    font-size 12px
     text-align center
-    margin-bottom 0
+    margin 0
 
 .floating-label-form-group
   font-size 14px
