--- a/themes/clean-blog/layout/_partial/article-full.ejs
+++ b/themes/clean-blog/layout/_partial/article-full.ejs
@@ -62,7 +62,7 @@
 
             <!-- Comments -->
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <%- partial("_partial/comments.ejs") %>
+                <%- partial("_partial/comments.ejs", {post: item}) %>
             </div>
         </div>
     </div>
