--- a/themes/clean-blog/layout/_partial/comments.ejs
+++ b/themes/clean-blog/layout/_partial/comments.ejs
@@ -1,3 +1,27 @@
+<% if (page.comments && theme.comments && theme.comments.duoshuo_shortname) { %>
+    <hr />
+    <h3><%- __('comment')%>:</h3>
+    <section id="comments">
+        <!-- 多说评论框 start -->
+        <div class="ds-thread"
+            data-thread-key="<%= theme.comments.duoshuo_shortname %>-<%= post.canonical_path.split('/').join('-') %>"
+            data-title="<%= post.title %>" data-url="<%= page.permalink %>"></div>
+        <!-- 多说评论框 end -->
+        <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
+        <script type="text/javascript">
+            var duoshuoQuery = {short_name:'<%= theme.comments.disqus_shortname %>'};
+            (function() {
+                var ds = document.createElement('script');
+                ds.type = 'text/javascript';ds.async = true;
+                ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+                ds.charset = 'UTF-8';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ds);
+            })();
+        </script>
+        <!-- 多说公共JS代码 end -->
+    </section>
+<% } %>
+
 <% if(page.comments && theme.comments && theme.comments.disqus_shortname){ %>
     <hr />
     <h3><%- __('comment')%>:</h3>
